moved IsolateMethod to a better location